--- a/final/app/templates/about.html
+++ b/final/app/templates/about.html
@@ -47,41 +47,22 @@
 </head>
 <body>
     <header>
-        <h1>About Our Company</h1>
+        <h1>About Our Project</h1>
       </header>
       
       <main>
-        <section>
-          <h2>Our Mission</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae magna et lacus tempus finibus. Fusce efficitur tortor nec interdum eleifend.</p>
-        </section>
         
-        <section>
-          <h2>Our History</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae magna et lacus tempus finibus. Fusce efficitur tortor nec interdum eleifend.</p>
-        </section>
-        
+
+
+
         <section>
           <h2>Our Team</h2>
           <ul>
-            <li>John Doe - CEO</li>
-            <li>Jane Smith - CTO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
-            <li>Mark Johnson - CFO</li>
+            <li>Fiker Dereje</li>
+            <li>Andarge</li>
+            <li>Haile</li>
+            <li>Ashenafi</li>
+   
             
 
 
@@ -89,7 +70,7 @@
         </section>
       </main>
       <footer>
-        <p>&copy; 2023 Our Company. All rights reserved.</p>
+        <p>&copy; 2023. All rights reserved.</p>
       </footer>
 </body>
 </html>
